added tabs, chagned some text

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -670,7 +670,7 @@ function hide_skip(num){
 </tr>
 </table>
 </div>
-<span id=go class='ui-button ui-state-default ui-corner-all' onClick="set_display_order(); loading([],['results']); initialize_basefile(['args__prog','args__GEvo', 'args__return_name','args__1'],[populate_page_obj]); go_run();">Go</span>
+<span id=go style="font-size: 1em" class='ui-button ui-state-default ui-corner-all' onClick="set_display_order(); loading([],['results']); initialize_basefile(['args__prog','args__GEvo', 'args__return_name','args__1'],[populate_page_obj]); go_run();">Run GEvo Analysis!</span>
 <table>
 
 <tr align left>
