--- a/web/tmpl/FeatView.tmpl
+++ b/web/tmpl/FeatView.tmpl
@@ -10,7 +10,13 @@
 
 $(document).ready(function(){
   $('#accn').focus();
+
 });
+
+$(function() {
+ $(".dialog").dialog({ autoOpen: false} );
+ });
+
 
 function search_chain(val) {
  $('#data_table').show(0);
@@ -70,7 +76,6 @@ function get_anno_chain (val1,val2) {
    if ($('#remove').is(":hidden")) {$('#remove').show(0);}
    if ($('#clear').is(":hidden")) {$('#clear').show(0);}
    if ($('#send').is(":hidden")) {$('#send').show(0);}
-   if($('#feat_list').is(":hidden")) {$('#feat_list').show(0);}
  }
  as = $('#accn_select').val();
  tn = $('#Type_name').val();
@@ -264,7 +269,7 @@ function search_bar(div_id){
 
 
 </SCRIPT>
-<TABLE style="float:left">
+<TABLE style="float:left" class="ui-widget-content">
        <TR>
          <TD nowrap>
            Name:
@@ -301,35 +306,19 @@ function search_bar(div_id){
          Name: <input type="text" size=11 onFocus="search_bar('org_name')" style="font-style:italic" value="Search" name="org_name" id="org_name" onKeyUp='timing("org_name");'><br>
 	 Description: <input type="text" size=11 value="Search" name = "org_desc" id="org_desc" style="font-style:italic" onFocus="search_bar('org_desc')" onKeyUp='timing("org_desc");'>
 	  <DIV id="org_list"><TMPL_VAR NAME="ORG_LIST"></DIV>
-<!--          <select  name="org" id="org" onchange="get_feature_types(['args__orgid','org'],['search_type']);"/>
-          <TMPL_LOOP NAME="ORG_LOOP">
-          <TMPL_VAR NAME=ORG> 
-          </TMPL_LOOP>
-         </SELECT>-->
         <tr>
-	<td><input type="button" value="Search" onclick="search_chain(1)">
+	<td><span class="ui-button ui-state-default ui-corner-all" onclick="search_chain(1)">Search</span>
+	<td align=right><span class="ui-button ui-state-default ui-corner-all" onclick="$('#feat_list').dialog('open');">Feature List</span>
 </TABLE>
 
-<div >
-  <div class="header"> Selected Features List</div>
-    <div id="feat_list" style="display:none">
-    <font class="small count">Feature Count: 0</font>
-              <DIV id=featlist_select><SELECT id="featlist_choice" SIZE="10" MULTIPLE onchange="get_anno(['args__featlist_choice','featlist_choice'],[show_anno])">
-              <option id=blank value=null>No Feature Selected</option>
-              </SELECT>
-    </div>
-    <div id=add_all_search></div>
-    <input type="button" style="display: none" id=add_all value="Add All Features" onClick="$('#add_all').hide();$('#add_all_search').html('<img src=./picts/animations/DNA_orbit_animated_small_third.gif >'); cogesearch_featids(['args__accn','accn', 'args__anno','annosearch','args__type','type', 'args__org_id','org_id', 'args__feat_name_wild','feat_name_wild', 'args__feat_anno_wild', 'feat_anno_wild','args__org_name','org_name','args__org_desc','org_desc'],[add_all]);">
-    <input type="button" style="display: none" id=remove value="Remove" onClick="$('#'+$('#featlist_choice').val()).remove();counting();">
-    <input type="button" style="display: none" id=clear value="Clear" onClick="clear_feat_list()"><br>
-    <input type="button" style="display: none" id=send value="Send to Feature List Viewer" onClick="send_to_FeatList()">
- </div>
-</div>
-</div>
+
+
+
+
  <table id="data_table" style="display:none">
  <thead align=left>
   <th>Annotation</th>
-  <th>Datasets</th>
+  <th>Datasets</th><h2></h2>
   <th>Type</th>
  </thead>
  <tbody>
@@ -346,3 +335,20 @@ function search_bar(div_id){
 </TABLE>
 <DIV id="anno"></DIV>
 
+
+<div class="dialog" title="Feature List" id="feat_list">
+  <table><tr><Td>
+    <span class="small count">Feature Count: 0</span><br>
+              <SELECT id="featlist_choice" SIZE="10" MULTIPLE onchange="get_anno(['args__featlist_choice','featlist_choice'],[show_anno])">
+              <option id=blank value=null>No Feature Selected</option>
+              </SELECT>
+<td>
+    <span class="ui-button ui-state-default ui-corner-all" id=send onClick="send_to_FeatList()">Create Feature List</span><br><br>
+    <span class="ui-button ui-state-default ui-corner-all" id=add_all onClick="$('#add_all').hide();$('#add_all_search').html('<img src=./picts/animations/DNA_orbit_animated_small_third.gif >'); cogesearch_featids(['args__accn','accn', 'args__anno','annosearch','args__type','type', 'args__org_id','org_id', 'args__feat_name_wild','feat_name_wild', 'args__feat_anno_wild', 'feat_anno_wild','args__org_name','org_name','args__org_desc','org_desc'],[add_all]);">Add All Features</SPAN><br><br>
+      <span class="ui-button ui-state-default ui-corner-all" id=remove onClick="$('#'+$('#featlist_choice').val()).remove();counting();">Remove</span><br><br>
+    <span class="ui-button ui-state-default ui-corner-all" id=clear onClick="clear_feat_list()">Clear</span><br>
+
+</table>
+    <div id=add_all_search></div>
+
+</div>
