removed blanking of org_info div to keep interface from behaving jittery

--- a/web/tmpl/OrganismView.tmpl
+++ b/web/tmpl/OrganismView.tmpl
@@ -33,7 +33,7 @@ function get_dataset_name_chain(val)
  if (val){
     get_dataset(['args__dsname','args__'+val], [dataset_info_chain]);
     $('#org_list').html('<hidden id=org_id>');
-    $('#org_info').html(' ');
+//    $('#org_info').html(' ');
     $('#org_count').html(' ');
     $('#dsg_list').html('<hidden id=dsg_id>');
     $('#dsg_info').html(' ');
