--- a/web/css/jquery-ui-1.7.1.custom.css
+++ b/web/css/jquery-ui-1.7.1.custom.css
@@ -47,7 +47,7 @@
 /* Component containers
 ----------------------------------*/
 .ui-widget { font-family: Arial, Geneva, Times, fixed; font-size: 1em; }
-.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Arial, Geneva, Times, fixed; font-size: 0.7em; }
+.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Arial, Geneva, Times, fixed; font-size: 0.7em; } /* Josh may have changed params here */
 .ui-widget-content { border: 1px solid #92905d; background: #e3eacc url(/CoGe/picts/jquery-ui-images/ui-bg_highlight-soft_100_e3eacc_1x100.png) 50% top repeat-x; color: #222222; }
 .ui-widget-content a { color: #222222; }
 .ui-widget-header { border: 1px solid #9c947c; background: #928868 url(/CoGe/picts/jquery-ui-images/ui-bg_inset-soft_22_928868_1x100.png) 50% 50% repeat-x; color: #ffffff; font-weight: bold; }
@@ -356,8 +356,8 @@
 .ui-dialog .ui-dialog-titlebar-close span { display: block; margin: 1px; }
 .ui-dialog .ui-dialog-titlebar-close:hover, .ui-dialog .ui-dialog-titlebar-close:focus { padding: 0; }
 .ui-dialog .ui-dialog-content { border: 0; padding: .5em 1em; background: none; overflow: auto; zoom: 1; }
-.ui-dialog .ui-dialog-buttonpane { text-align: left; border-width: 1px 0 0 0; background-image: none; margin: .5em 0 0 0; padding: .3em 1em .5em .4em; }
-.ui-dialog .ui-dialog-buttonpane button { float: right; margin: .5em .4em .5em 0; cursor: pointer; padding: .2em .6em .3em .6em; line-height: 1.4em; width:auto; overflow:visible; }
+.ui-dialog .ui-dialog-buttonpane { text-align: left; border-width: 1px 0 0 0; background-image: none; margin: .5em 0 0 0; padding: .3em 1em .5em .4em; } /* Josh may have changed params here */
+.ui-dialog .ui-dialog-buttonpane button { float: right; margin: .5em .4em .5em 0; cursor: pointer; padding: .2em .6em .3em .6em; line-height: 1.4em; width:auto; overflow:visible; } /* Josh may have changed params here */
 .ui-dialog .ui-resizable-se { width: 14px; height: 14px; right: 3px; bottom: 3px; }
 .ui-draggable .ui-dialog-titlebar { cursor: move; }
 /* Progressbar
@@ -403,6 +403,7 @@
 .ui-tabs .ui-tabs-panel { padding: 1em 1.4em; display: block; border-width: 0; background: none; }
 .ui-tabs .ui-tabs-hide { display: none !important; }
 
+/**************************************/
 /* Button (added by Josh), css taken from http://www.filamentgroup.com/examples/buttonFrameworkCSS/ with some modifications
  * ---------------------------------*/
 .ui-button {
