updated base_url for new version of gobe

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -443,7 +443,7 @@ function handle_results (html,w, h, img_base, n_images, gevo_link, message) {
             'freezable': getQueryParamValue('freezable') || 'false',
             'pad_gs'   : jQuery('#pad_gs') ? jQuery('#pad_gs').val()  : getQueryParamValue('pad_gs') || '0',
             'gsid'     : getQueryParamValue('gsid') || getQueryParamValue('genespace_id') || '0',
-            'base_url' : getQueryParamValue('base_url')|| '/CoGe/',
+            'base_url' : getQueryParamValue('base_url')|| '/CoGe/gobe/',
             'img_url'  : getQueryParamValue('img_url')|| '/CoGe/tmp/GEvo/',
             'base_name': getQueryParamValue('base_name')|| img_base
         };
