fixed bug where #addup is not defined

--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -169,10 +169,14 @@ function redefine(rc){
   $('#upstream').val(up);
   down = $('#downstream').val().replace(/,|\./g,"");
   $('#downstream').val(down);
-  up = $('#addup').val().replace(/,|\./g,"");
-  $('#addup').val(up);
-  down = $('#adddown').val().replace(/,|\./g,"");
-  $('#adddown').val(down);
+  if ($('(#addup').val()) {
+   up = $('#addup').val().replace(/,|\./g,"");
+   $('#addup').val(up);
+  }
+  if ($('(#adddown').val()) {
+   down = $('#adddown').val().replace(/,|\./g,"");
+   $('#adddown').val(down);
+  }
 
 
   if(! isNaN($('#addup').val())) {
