update to new version of jquery-ui; added new css for coge's modifiation to jquery-ui

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -14,7 +14,8 @@
 
 <SCRIPT language="JavaScript" type="text/javascript" src="/CoGe/js/jquery-ui-1.7.2.custom.min.js"></SCRIPT>
 
-<link rel="stylesheet" type="text/css" href="/CoGe/css/jquery-ui-1.7.1.custom.css" />
+<link rel="stylesheet" type="text/css" href="/CoGe/css/jquery-ui-1.7.2.custom.css" />
+<link rel="stylesheet" type="text/css" href="/CoGe/css/jquery-ui-coge-supplement.css" />
 
  <SCRIPT language="JavaScript" type="text/javascript" src="/CoGe/js/jquery.cookie.js"></SCRIPT>
 <SCRIPT language="JavaScript" type="text/javascript" src="/CoGe/js/superfish.js"></SCRIPT>
