added a check so that the results_info box won't open if user selections multiple hits to see

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -171,7 +171,10 @@ Gobe.set_genespace= function (updown, idx, value, length, anchorlength){
 
 Gobe.handle_html= function (html) {
   $('#results_info').html(html);
-  $('#results_info').dialog('open');
+  
+  if (!html.match(/multiple hits/)) {
+   $('#results_info').dialog('open');
+  }
 };
 
 function setheight(){ 
