--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -202,6 +202,7 @@ $(document).ready(function(){
      // close the dialog box when the run a new analysis.
      jQuery('#go').click(function(){
          $('#results_info').dialog('close');
+         jQuery('html, body').animate({scrollTop: 0}, 2000);
      });
  	 check_seq_submit();
  	 autodistance_setup();
