--- a/web/css/styled.css
+++ b/web/css/styled.css
@@ -767,3 +767,43 @@ td.link:hover {
  border-collapse: collapse;
 }
 
+/***Portlet css for user profile**/
+.portlet { 
+  margin: 0 1em 1em 0; 
+  max-width: 452;
+}
+
+.portlet-header { 
+  margin: 0.3em; 
+  padding-bottom: 4px; 
+  padding-left: 0.2em; 
+  cursor: move; 
+  max-width: 452;
+}
+
+.portlet-footer { 
+  padding-bottom: 4px; 
+  padding-left: 0.2em;
+}
+
+.portlet-header .ui-icon { 
+  float: right; 
+  cursor: pointer;
+}
+
+.portlet-content { 
+  padding: 0.4em; 
+  display:none;
+}
+
+.ui-sortable-placeholder { 
+  border: 1px dotted black; 
+  visibility: visible !important; 
+  height: 50px !important; 
+}
+
+.ui-sortable-placeholder * { 
+  visibility: hidden; 
+}
+
+/***End user profile portlet ui***/
